fix: workspace shell vertical overflow (#899)
* fix: workspace shell vertical overflow

* fix: revert scroll use auto

--- a/packages/ai-chat-components/src/components/workspace-shell/src/workspace-shell.scss
+++ b/packages/ai-chat-components/src/components/workspace-shell/src/workspace-shell.scss
@@ -22,6 +22,7 @@ $css--plex: true !default;
   @include type.type-style("body-01");
 
   display: flex;
+  overflow: auto;
   /* stylelint-disable-next-line declaration-no-important */
   box-sizing: border-box !important;
   flex-direction: column;
